# opencc-gui

./: .gitignore  README  mingw_build.sh  opencc-gui.pri  opencc-gui.pro
data/: update_dictionary.bat
opencc/: CMakeLists.txt
opencc-gui/: opencc-gui.pri
opencc-gui/l10n/: zhs.ts  zht.ts
opencc-gui/src/: aboutdialog.ui  converter.cpp  converter.h  main.cpp  mainwindow.cpp  mainwindow.h  ui_aboutdialog.h  ui_convertfiledialog.h  ui_mainwindow.h
opencc/src/: CMakeLists.txt  config_reader.c  converter.c  dictionary_group.c
opencc/src/dictionary/: text.c  text.h
opencc/src/tools/: opencc_dict.c  opencc_dict.h
src/: opencc_types.h
uchardet/: uchardet.pri  uchardet.pro
